# baby-vllm

./: .gitignore  README.md  README.zh-CN.md  bench.py  bench_data_parallel.py  main.py  offline_bench.py  online_bench.py  pyproject.toml  test_phase6.py  test_qwen3.py
babyvllm/: __init__.py  config.py  sampling_params.py
babyvllm/engine/: __init__.py  async_llm_engine.py  block_manager.py  llm_engine.py  model_runner.py  outputs.py  request_tracker.py  scheduler.py  sequence.py
babyvllm/entrypoints/: __init__.py  api_server.py  cli.py
babyvllm/layers/: __init__.py  activation.py  attention.py  embedding_head.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py
babyvllm/models/: qwen3.py
babyvllm/utils/: __init__.py  context.py  loader.py
docs/: communication-methods.md
docs/flowchart/: README.md  attention-and-context.md  engine-overview.md  kv-cache-block-manager.md  model-runner-forward.md  offline-generate.md  online-streaming.md  parallelism.md  qwen3-model.md  scheduler.md
docs/parallel-inference/: parallel_inference_flow_en.md
src/layers/: activation.py  attention.py  embedding_head.py  layernorm.py  linear.py  rotary_embedding.py
src/models/: qwen3.py
src/utils/: __init__.py  context.py
