[project]
name = "babyvllm"
version = "0.1.0"
description = "A custom vLLM project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "transformers",
    "torch",
    "xxhash",
    "flash-attn",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.scripts]
babyvllm-server = "babyvllm.entrypoints.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["babyvllm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "gpu: tests that require a real GPU (CUDA).",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "isort>=5.0",
]
